[package]
name = "app"
version = "0.1.0"
edition = "2021"

[features]
testnet = []
mainnet = []

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1.52"
bitcoin = "0.26.2"
prost = "0.9"
rustls = { version = "0.19.1", features = ["dangerous_configuration"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
thiserror = "1.0.26"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.6", features = ["tls"] }
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
webpki = "0.21.4"
chrono = { version = "0.4.19", features = ["serde"]}
log = "0.4.16"
cfg-if = "1.0.0"
hex = "0.4.3"
futures = "0.3.21"
lightning-invoice = "0.16.0"
const_format = "0.2.24"
sha2 = "0.10.2"
bitcoin_hashes = "0.10.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.6"
